[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "common"
path = "lib.rs"

[dependencies]
rust-crypto = "0.2.36"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"

[profile.dev]
codegen-units = 1000
panic = 'unwind'

[profile.release]
opt-level = 's'
lto = true
strip = true
codegen-units = 1
panic = 'abort'
