[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "common"
path = "lib.rs"

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
hmac-sha512 = "1.1.4"
log4rs = "1.2.0"
log = "0.4.17"

[profile.dev]
codegen-units = 1000
panic = 'unwind'

[profile.release]
opt-level = 's'
lto = true
strip = true
codegen-units = 1
panic = 'abort'
